Wed Jul 25 08:37:51 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* docs/introduction.rst: Add documentation on indexing and
	  searching facets.

Wed Jul 25 03:06:19 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection.py: Correct small initialisation bug.

Wed Jul 25 01:53:51 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/: Change string marshalling to use xapian's stuff; cuts
	  down code, uses a more compact representation, and is compatible
	  with the facet range calculation stuff.  Update tests to cover
	  the facet calculation stuff in more detail (but still need more
	  coverage).  Fix bug with converting string range to a numeric
	  range more than once if get_suggested_facets is called
	  repeatedly.

Tue Jul 24 10:32:56 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/fieldactions.py,secore/searchconnection.py,
	  secore/searchconnection_doctest2.txt: Add the "FACET" action, to
	  store facets for field search and facet selection.  Still
	  remaining is to change the serialisation of floats to match
	  Xapian to make the numeric range calculation work correctly,
	  translate the resulting numeric ranges into a more suitable
	  python representation, and handle multiple values for a
	  particular facet being specified for a single document.

Mon Jul 23 10:59:58 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* docs/introduction.rst,secore/searchconnection.py: Add special
	  value of -1 for checkatleast parameter, to check all matches, and
	  document it (and the general reason for setting the checkatleast
	  parameter when using get_top_tags()).

Mon Jul 23 10:40:22 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/: Add missing synonym stuff.

Tue Jul 17 13:42:39 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* docs/introduction.rst,secore/fieldactions.py,
	  secore/searchconnection.py: Add some documentation of tags, and